--- a/index.html
+++ b/index.html
@@ -9,25 +9,40 @@
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+  <header>
+    <nav class="flex">
+      <a href="/">
+        <img src="./images/logo.svg" alt="Fylio" class="logo">
+      </a>
+      <a href="#">
+        <span>Features</span>
+        <span>Team</span>
+        <span>Sign In</span>
+      </a>
+    </nav>
+  </header>
 
+  <section>
+    All your files in one secure location, accessible anywhere.
+    Fylo stores all your most important files in one secure location. Access them wherever 
+    you need, share and collaborate with friends family, and co-workers.
+
+    <button>
+      Get Started
+    </button>
+  </section>
 
   <!-- 
-  Features
-  Team
-  Sign In
 
-  All your files in one secure location, accessible anywhere.
 
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
+  
 
-  Get Started
+  
+
+  
 
   Access your files, anywhere
 
@@ -99,11 +114,6 @@
   Terms
   Privacy
  -->
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Ouokki</a>.
-    </p>
-  </footer>
+  
 </body>
 </html>
