--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -26,13 +28,21 @@
   </header>
 
   <section>
-    All your files in one secure location, accessible anywhere.
-    Fylo stores all your most important files in one secure location. Access them wherever 
-    you need, share and collaborate with friends family, and co-workers.
-
-    <button>
-      Get Started
-    </button>
+    <div>
+      <img src="./images/illustration-intro.png" alt="Intro" class="imgIntro">
+    </div>
+    <p class="title2">
+      All your files in one secure location, accessible anywhere.
+    </p>
+    <div class="title3">
+      Fylo stores all your most important files in one secure location. Access them wherever 
+      you need, share and collaborate with friends family, and co-workers.
+    </div>
+    <div>
+      <button class="button">
+        Get Started
+      </button>
+    </div>    
   </section>
 
   <!-- 
