--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
   </header>
 
-  <section>
+  <section class="mainSection">
     <div>
       <img src="./images/illustration-intro.png" alt="Intro" class="imgIntro">
     </div>
@@ -39,40 +39,72 @@
       you need, share and collaborate with friends family, and co-workers.
     </div>
     <div>
-      <button class="button">
+      <button type="button" class="button">
         Get Started
       </button>
     </div>    
   </section>
 
+  <section class="secondSection">
+    <div class="sectionPart">
+      <div>
+        <img class="sectionImg" src="./images/icon-access-anywhere.svg" alt="icon-access-anywhere">
+      </div>
+      <div>
+        <div class="sectionTitles">Access your files, anywhere</div>
+        <div class="title4">
+          The ability to use a smartphone, tablet, or computer to access your account means your 
+          files follow you everywhere.
+        </div>
+      </div>
+    </div>
+    <div class="sectionPart">
+      <div>
+        <img class="sectionImg" src="./images/icon-security.svg" alt="icon-security">
+      </div>
+      <div>
+        <div class="sectionTitles">Security you can trust</div>
+        <div class="title4">
+          2-factor authentication and user-controlled encryption are just a couple of the security 
+          features we allow to help secure your files.
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="secondSection">
+    <div class="sectionPart">
+      <div>
+        <img class="sectionImg" src="./images/icon-collaboration.svg" alt="icon-collaboration">
+      </div>
+      <div>
+        <div class="sectionTitles">Real-time collaboration</div>
+        <div class="title4">
+          Securely share files and folders with friends, family and colleagues for live collaboration. 
+          No email attachments required.
+        </div>
+      </div>
+    </div>
+    <div class="sectionPart">
+      <div>
+        <img class="sectionImg" src="./images/icon-any-file.svg" alt="icon-any-file">
+      </div>
+      <div>
+        <div class="sectionTitles">Store any type of file</div>
+          <div class="title4">
+          Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
+          file types to be securely stored and shared.
+        </div>
+      </div>
+    </div>
+    
+  </section>
+
   <!-- 
 
 
-  
+ 
 
-  
-
-  
-
-  Access your files, anywhere
-
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
-
-  Security you can trust
-
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
-
-  Real-time collaboration
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
-
-  Store any type of file
-
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
 
   Stay productive, wherever you are
 
